--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
