--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.1",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
+    "mailgun.js": "^10.2.3",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
@@ -47,7 +49,8 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
