--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/web3.js": "^1.95.4",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/analytics": "^1.3.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
