--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
@@ -31,14 +32,16 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/web3.js": "^1.95.4",
+    "@tabler/icons-react": "^3.21.0",
     "@types/bcrypt": "^5.0.2",
     "@vercel/analytics": "^1.3.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "form-data": "^4.0.1",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.452.0",
     "mailgun.js": "^10.2.3",
     "next": "14.2.15",
@@ -49,7 +52,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
     "zod": "^3.23.8"
